--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Advice Generator</title>
 </head>
 <body>
-    <div class="article">
+    <div class="article mx-3">
         <div class="advice-number text-center">ADVICE #<span id="advice-number"></span></div>
         <div class="advice-container text-center"><span class="advice">“</span><span class="advice" id="advice"></span><span class="advice">”</span></div>
         <picture>
